@@ -2,6 +2,7 @@
 
 S3method(print,git_config)
 S3method(print,git_status)
+export(cred_ssh_key)
 export(is_blob)
 export(is_commit)
 export(libgit2_features)
@@ -55,7 +56,6 @@ exportMethods(config)
 exportMethods(content)
 exportMethods(contributions)
 exportMethods(cred_env)
-exportMethods(cred_ssh_key)
 exportMethods(cred_user_pass)
 exportMethods(default_signature)
 exportMethods(descendant_of)
