@@ -1,25 +1,21 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/credential.r
-\docType{methods}
 \name{cred_ssh_key}
 \alias{cred_ssh_key}
-\alias{cred_ssh_key,character,character,character-method}
-\alias{cred_ssh_key,character,character,missing-method}
 \title{Create a new passphrase-protected ssh key credential object}
 \usage{
-cred_ssh_key(publickey, privatekey, passphrase)
-
-\S4method{cred_ssh_key}{character,character,character}(publickey, privatekey,
-  passphrase)
-
-\S4method{cred_ssh_key}{character,character,missing}(publickey, privatekey)
+cred_ssh_key(publickey = "~/.ssh/id_rsa.pub", privatekey = "~/.ssh/id_rsa",
+  passphrase = character(0))
 }
 \arguments{
-\item{publickey}{The path to the public key of the credential}
+\item{publickey}{The path to the public key of the
+credential. Default is \code{'~/.ssh/id_rsa.pub'}}
 
-\item{privatekey}{The path to the private key of the credential}
+\item{privatekey}{The path to the private key of the
+credential. Default is \code{'~/.ssh/id_rsa'}}
 
-\item{passphrase}{The passphrase of the credential}
+\item{passphrase}{The passphrase of the credential. Default is
+\code{character(0)}}
 }
 \value{
 A S4 \code{cred_ssh_key} object
@@ -31,8 +27,9 @@ Create a new passphrase-protected ssh key credential object
 \dontrun{
 ## Create a ssh key credential object. It can optionally be
 ## passphrase-protected
-cred_ssh_key("~/.ssh/id_rsa.pub", "~/.ssh/id_rsa")
+cred <- cred_ssh_key("~/.ssh/id_rsa.pub", "~/.ssh/id_rsa")
+repo <- repository("git2r")
+push(repo, credentials = cred)
 }
 }
-\keyword{methods}
 
